# ksysguard6

./: CMakeLists.txt  build-kde-neon.sh  config-ksysguard.h.cmake
cmake/: FindNL.cmake  Findlibpcap.cmake
debian/: changelog  control
formatter/: CMakeLists.txt  Formatter.cpp  Formatter.h  Messages.sh  Unit.cpp  Unit.h
formatter/declarative/: CMakeLists.txt  FormatterPlugin.cpp  FormatterPlugin.h  FormatterWrapper.cpp  FormatterWrapper.h  qmldir
gui/: CMakeLists.txt  SensorBrowser.cpp  SensorBrowser.h  WorkSheet.cpp  Workspace.cpp  Workspace.h  ksysguard.cpp  ksysguard.h
gui/SensorDisplayLib/: BarGraph.cpp  DancingBars.cpp  DummyDisplay.cpp  FancyPlotter.cpp  ListView.cpp  LogFile.cpp  MultiMeter.cpp  ProcessController.cpp  SensorDisplay.cpp  SensorDisplay.h  SensorLogger.cpp  SensorLogger.h
ksgrd/: CMakeLists.txt  Messages.sh  SensorAgent.cpp  SensorAgent.h  SensorClient.h  SensorManager.cpp  SensorManager.h  SensorShellAgent.cpp  SensorShellAgent.h  SensorSocketAgent.cpp  SensorSocketAgent.h
ksysguardd/: ksysguardd.c
ksysguardd/CContLib/: ccont.h
ksysguardd/Linux/: Memory.c  ProcessList.c  acpi.c
po/ar/: processui.po
po/as/: processui.po
po/az/: processui.po
po/be/: processui.po
po/bg/: processui.po
po/bn_IN/: processui.po
po/bs/: processui.po
po/ca/: processui.po
po/ca@valencia/: processui.po
po/cs/: processui.po
po/csb/: processui.po
po/da/: processui.po
po/de/: processui.po
po/de/docs/ksysguard/: index.docbook
po/el/: processui.po
po/en_GB/: processui.po
po/eo/: processui.po
po/es/: processui.po
po/et/: processui.po
po/eu/: processui.po
po/fa/: processui.po
po/fi/: processui.po
po/fr/: processui.po
po/fy/: processui.po
po/ga/: processui.po
po/gl/: processui.po
po/gu/: processui.po
po/he/: processui.po
po/hi/: processui.po
po/hr/: processui.po
po/hsb/: processui.po
po/hu/: processui.po
po/ia/: processui.po
po/id/: processui.po
po/is/: processui.po
po/it/: processui.po
po/ja/: processui.po
po/ka/: processui.po
po/kk/: processui.po
po/km/: processui.po
po/ko/: processui.po
po/ku/: processui.po
po/lt/: processui.po
po/lv/: processui.po
po/mai/: processui.po
po/mk/: processui.po
po/ml/: processui.po
po/mr/: processui.po
po/ms/: processui.po
po/nb/: processui.po
po/nds/: processui.po
po/ne/: processui.po
po/nl/: processui.po
po/nn/: processui.po
po/oc/: processui.po
po/or/: processui.po
po/pa/: processui.po
po/pl/: processui.po
po/pt/: processui.po
po/pt/docs/ksysguard/: index.docbook
po/pt_BR/: processui.po
po/ro/: processui.po
po/ru/: processui.po
po/se/: processui.po
po/si/: processui.po
po/sk/: processui.po
po/sl/: processui.po
po/sq/: processui.po
po/sr/: processui.po
po/sr@ijekavian/: processui.po
po/sr@ijekavianlatin/: processui.po
po/sr@latin/: processui.po
po/sv/: processui.po
po/ta/: processui.po
po/te/: processui.po
po/tg/: processui.po
po/th/: processui.po
po/tr/: processui.po
po/ug/: processui.po
po/uk/: processui.po
po/wa/: processui.po
po/zh_CN/: processui.po
po/zh_TW/: processui.po
processcore/: CMakeLists.txt  Messages.sh  actions.actions  application_data_model.cpp  application_data_model.h  atop_p.h  cgroup.cpp  cgroup.h  cgroup_data_model.cpp  cgroup_data_model.h  extended_process_list.cpp  extended_process_list.h  formatter.h  helper.cpp  helper.h  process.cpp  process.h  process_attribute.cpp  process_attribute.h  process_attribute_model.cpp  process_attribute_model.h  process_controller.cpp  process_controller.h  process_data_model.cpp  process_data_model.h  process_data_provider.cpp  process_data_provider.h  processes.cpp  processes.h  processes_atop_p.cpp  processes_atop_p.h  processes_base_p.cpp  processes_base_p.h  processes_dragonfly_p.cpp  processes_freebsd_p.cpp  processes_gnu_p.cpp  processes_linux_p.cpp  processes_local_p.cpp  processes_local_p.h  processes_netbsd_p.cpp  (+7 more)
processcore/declarative/: CMakeLists.txt  ProcessEnums.cpp  ProcessEnums.h  ProcessPlugin.cpp  ProcessPlugin.h  qmldir
processcore/plugins/network/: CMakeLists.txt  README.md  network.cpp  network.h  networkconstants.h.in  networkplugin.json
processcore/plugins/network/helper/: Accumulator.cpp  Accumulator.h  CMakeLists.txt  Capture.cpp  Capture.h  ConnectionMapping.cpp  ConnectionMapping.h  Packet.cpp  Packet.h  TimeStamps.h  main.cpp
processcore/plugins/nvidia/: CMakeLists.txt  nvidia.cpp  nvidia.h  nvidia.json
processui/: CMakeLists.txt  KTextEditVT.cpp  KTextEditVT.h  Messages.sh  ProcessFilter.cpp  ProcessFilter.h  ProcessModel.cpp  ProcessModel.h  ProcessModel_p.h  ProcessWidgetUI.ui  ReniceDlg.cpp  ReniceDlg.h  ReniceDlgUi.ui  ksysguardprocesslist.cpp  ksysguardprocesslist.h  scripting.cpp  scripting.h  timeutil.h
processui/designer/: CMakeLists.txt
processui/processdetails/: GeneralTab.cpp  GeneralTab.h  MemoryMapsTab.cpp  MemoryMapsTab.h  OpenFilesTab.cpp  OpenFilesTab.h  ProcessDetailsDialog.cpp  ProcessDetailsDialog.h
signalplotter/: CMakeLists.txt  kgraphicssignalplotter.cpp  kgraphicssignalplotter.h  ksignalplotter.cpp  ksignalplotter.h  ksignalplotter_p.h
signalplotter/designer/: CMakeLists.txt
systemmonitor/: CMakeLists.txt  ksystemactivitydialog.cpp  main.cpp
